$begin News$$
$spell
	cpp
$$

$section The mat2cpp News file$$

$head 06-05-15$$
Added $xref/randn/$$ library routine.
Also added the section $tref library$$ to the documentation.

$head 06-05-05$$
Added the $xref/cholesky/$$ library routine.

$head 06-04-18$$
Release of first version.

$end