@@ -29,19 +29,19 @@ $href%http://www.boost.org/libs/numeric/ublas/doc/overview.htm%ublas%$$.
 $head Test and Install$$
 $list number$$
 Download the file
-$href%mat2cpp-20120506.tar.gz%$$.
+$href%mat2cpp-20130721.tar.gz%$$.
 
 $lnext
-Extract the distribution in to the $code mat2cpp-20120506$$ subdirectory
+Extract the distribution in to the $code mat2cpp-20130721$$ subdirectory
 with the command
 $codep
-	tar -xvzf mat2cpp-20120506.tar.gz
+	tar -xvzf mat2cpp-20130721.tar.gz
 $$
 
 $lnext
 Build the library and test program with the command
 $codei%
-	cd mat2cpp-20120506
+	cd mat2cpp-20130721
 	./configure --prefix=%prefix_dir% BOOST_DIR=%boost_dir% 
 	make
 %$$
@@ -122,7 +122,8 @@ $contents%
 	mat/mat2cpp_ok.m%
 	cpp/mat2cpp_ok.cpp%
 	NEWS%
-	omh/library.omh
+	omh/library.omh%
+	omh/mztuni.omh
 %$$
 
 $end
