@@ -1,0 +1,7 @@
+# ifndef MZTUNI_INCLUDED
+# define MZTUNI_INCLUDED
+
+extern size_t mztuni_seed(size_t seed);
+extern double mztuni(size_t seedm1 = 0);
+
+# endif
