@@ -1,1 +1,1 @@
-no ChangeLog file in mat2cpp distribution
+see ./NEWS or ./doc/news.xml file 
